--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
   listen 80;
 
   location /admin/ {
-    alias /usr/share/nginx/html/admin/;
+    root /usr/share/nginx/html/admin/;
     try_files $uri $uri/ /admin/index.html;
   }
 
