--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,10 @@
 server {
   listen 80;
 
-  location /admin/ {
-    root /usr/share/nginx/html/admin/;
-    try_files $uri $uri/ /admin/index.html;
-  }
-
-  error_page 500 502 503 504 /50x.html;
-  location = /50x.html {
-    root /usr/share/nginx/html;
+  root /usr/share/nginx/html;
+ 
+  location / {
+    index index.html index.htm;
+    try_files $uri $uri/ /index.html =404;
   }
 }
